--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "mongoose": "^6.2.1"
+    "lodash": "^4.17.21",
+    "mongoose": "^6.2.1",
+    "n_": "^3.0.0"
   },
   "devDependencies": {
     "jest": "^27.5.1",
     "nodemon": "^2.0.15"
   },
-  "jest": {"testEnvironment":"node"}
+  "jest": {
+    "testEnvironment": "node"
+  }
 }
