--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.2.1",
     "n_": "^3.0.0"
